# delivery-route-optimizer-template

./: .gitignore  pyproject.toml
.cursor/rules/: 00-heredoc-mandatory.mdc  00-task-decomposition-priority.mdc  01-issue-driven-development.mdc  01-python-style.mdc  02-github-operations.mdc  02-tdd-practices.mdc  03-workflow.mdc  04-modern-python-uv.mdc  05-streamlit-modern.mdc  06-github.mdc  07-error-handling.mdc  08-documentation.mdc  09-task-decomposition.mdc
.github/workflows/: deploy.yml
data/: sample_delivery_points.csv
docs/: requirements.md
