[project]
name = "delivery-route-optimizer"
version = "0.1.0"
description = "AIワークショップ用の配送ルート最適化アプリ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.39.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit-antd-components>=0.3.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"

